deploy/k3s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: viajes
  labels:
    app.kubernetes.io/name: viajes
